--- a/src/gui/CreateStudentGUI.form
+++ b/src/gui/CreateStudentGUI.form
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.CreateStudent">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="5" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.CreateStudentGUI">
+  <grid id="27dc6" binding="cadastroAPanel" layout-manager="GridLayoutManager" row-count="5" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="679" height="400"/>
+      <xy x="20" y="20" width="725" height="400"/>
     </constraints>
     <properties>
       <background color="-262664"/>
       <foreground color="-262664"/>
+      <preferredSize width="1280" height="720"/>
     </properties>
     <border type="none"/>
     <children>
@@ -17,7 +18,8 @@
         </constraints>
         <properties>
           <background color="-16185070"/>
-          <font name="Yu Gothic UI Semibold" size="26"/>
+          <focusable value="true"/>
+          <font name="Yu Gothic UI Semibold" size="36"/>
           <foreground color="-11753728"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
@@ -26,19 +28,19 @@
       </component>
       <component id="7cb4" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-16185070"/>
-          <font name="Yu Gothic UI" size="16"/>
+          <font name="Yu Gothic UI" size="20"/>
           <foreground color="-16185070"/>
-          <text value="Nome"/>
+          <text value="Nome:"/>
         </properties>
       </component>
       <component id="e2922" class="javax.swing.JTextField" binding="inputName">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="198" height="30"/>
           </grid>
         </constraints>
         <properties>
@@ -49,19 +51,19 @@
       </component>
       <component id="9721" class="javax.swing.JLabel">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-16185070"/>
-          <font name="Yu Gothic UI" size="16"/>
+          <font name="Yu Gothic UI" size="20"/>
           <foreground color="-16185070"/>
-          <text value="CPF"/>
+          <text value="CPF:"/>
         </properties>
       </component>
       <component id="84d5e" class="javax.swing.JTextField" binding="inputCpf">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="198" height="30"/>
           </grid>
         </constraints>
         <properties>
@@ -72,19 +74,19 @@
       </component>
       <component id="d9683" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-16185070"/>
-          <font name="Yu Gothic UI" size="16"/>
+          <font name="Yu Gothic UI" size="20"/>
           <foreground color="-16185070"/>
-          <text value="Email"/>
+          <text value="Email:"/>
         </properties>
       </component>
       <component id="49909" class="javax.swing.JTextField" binding="inputEmail">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="198" height="30"/>
           </grid>
         </constraints>
         <properties>
@@ -100,15 +102,15 @@
         </constraints>
         <properties>
           <background color="-16185070"/>
-          <font name="Yu Gothic UI" size="16"/>
+          <font name="Yu Gothic UI" size="20"/>
           <foreground color="-16185070"/>
-          <text value="Senha"/>
+          <text value="Senha:"/>
         </properties>
       </component>
       <component id="af48e" class="javax.swing.JTextField" binding="inputSenha">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="198" height="30"/>
           </grid>
         </constraints>
         <properties>
@@ -120,7 +122,9 @@
       </component>
       <hspacer id="767aa">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="44" height="11"/>
+          </grid>
         </constraints>
       </hspacer>
       <component id="5e96c" class="javax.swing.JTextField" binding="inputEndereco">
@@ -133,18 +137,19 @@
           <background color="-1"/>
           <font name="Yu Gothic Light" size="14"/>
           <foreground color="-16185070"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="84c81" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-16185070"/>
           <enabled value="true"/>
-          <font name="Yu Gothic UI" size="16"/>
+          <font name="Yu Gothic UI" size="20"/>
           <foreground color="-16185070"/>
-          <text value="Endereço"/>
+          <text value="Endereço:"/>
         </properties>
       </component>
       <component id="c792a" class="javax.swing.JLabel">
@@ -154,9 +159,10 @@
         <properties>
           <background color="-16185070"/>
           <enabled value="true"/>
-          <font name="Yu Gothic UI" size="16"/>
+          <focusable value="true"/>
+          <font name="Yu Gothic UI" size="20"/>
           <foreground color="-16185070"/>
-          <text value="Nome do Responsável"/>
+          <text value="Nome do Responsável:"/>
         </properties>
       </component>
       <component id="e6115" class="javax.swing.JTextField" binding="inputResponsavel">
@@ -173,14 +179,14 @@
       </component>
       <component id="3a0aa" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-16185070"/>
           <enabled value="true"/>
-          <font name="Yu Gothic UI" size="16"/>
+          <font name="Yu Gothic UI" size="20"/>
           <foreground color="-16185070"/>
-          <text value="Data de Nascimento"/>
+          <text value="Data de Nascimento:"/>
         </properties>
       </component>
       <component id="d35ed" class="javax.swing.JTextField" binding="inputDtNasc">
@@ -197,22 +203,33 @@
       </component>
       <component id="373e9" class="javax.swing.JButton" binding="confirmButton">
         <constraints>
-          <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="100" height="50"/>
+          </grid>
         </constraints>
         <properties>
-          <background color="-16185070"/>
+          <background color="-11753728"/>
+          <borderPainted value="true"/>
+          <defaultCapable value="true"/>
+          <focusPainted value="true"/>
+          <font name="Yu Gothic UI Semibold" size="14"/>
           <foreground color="-262664"/>
+          <hideActionText value="false"/>
+          <selected value="false"/>
           <text value="CONFIRMAR"/>
         </properties>
       </component>
-      <component id="5bd9e" class="javax.swing.JButton" binding="cancelButton">
+      <component id="5bd9e" class="javax.swing.JButton" binding="cleanButton">
         <constraints>
-          <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="70" height="50"/>
+          </grid>
         </constraints>
         <properties>
-          <background color="-16185070"/>
+          <background color="-11753728"/>
+          <font name="Yu Gothic UI Semibold" size="16"/>
           <foreground color="-262664"/>
-          <text value="CANCELAR"/>
+          <text value="LIMPAR"/>
         </properties>
       </component>
       <hspacer id="d98f9">
